Add iterateThroughArraylength and hasQuestionLoadFailed to QuizScreen to identify magic numbers

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -17,7 +17,8 @@
       "id": {
         "correct": "correct-answer",
         "incorrect": "incorrect-answer"
-      }
+      },
+      "load": "Loading..."
     },
     "resultScreen": {
       "resultIntro": "You answered ",
