Add utils folder to store confirmation and screenHandler which are now imported into App instead of originating there

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -25,7 +25,8 @@
       "questionType": {
         "trueFalse": "true-false",
         "multiChoice": "multiple-choice"
-      }
+      },
+      "confirmation": "Are you sure you want to go back home? Your progress will be lost."
     },
     "resultScreen": {
       "resultIntro": "You answered ",
