Add references to screens in config for consistency in screenHandler

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -50,6 +50,12 @@
     },
     "progressTracker": {
       "progress": "Progress"
+    },
+    "screens": {
+      "home": "home",
+      "start": "start",
+      "help": "help",
+      "result": "result"
     }
   }
 }
